clusters/easy-platform/apps/status-page/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: status-page
  labels:
    pod-security.kubernetes.io/enforce: restricted
